Fond des blocs opérant sur les modules de logo (site, article, creteil) et titre du site Ajout d'une option d'alignement (gauche/droite/centre) sur les logos/titres Prise en compte des yaml et corrections de fonctionnement
git-svn-id: svn://zone.spip.org/spip-zone/_squelettes_@86426 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/galaxie_melusine/melusine/trunk/css/style.css
+++ b/galaxie_melusine/melusine/trunk/css/style.css
@@ -534,3 +534,6 @@ color:#000;
 .bloc_rub3 h2 a{
 	color:#000;}
 
+.alignecentre { text-align: center; }
+.alignegauche { text-align: left; }
+.alignedroite { text-align: right; }
